[package]
name = "inspec-rspec"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
description = "Deterministic InSpec control to RSpec compliance test transpiler"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = "warn"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
